# NoticesOfHumanity

./: .gitignore  CMakeLists.txt  main.c
include/noh/: bot.h  common.h  database.h
src/: bot.c  database.c
